# flightdeck

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: architecture.md  governance.md  metrics.md  playbook.md
docs/decisions/: 001-measure-outcomes-not-calls.md  002-hash-chained-ledger.md  003-wrap-dont-proxy.md  004-conservative-savings-model.md
src/flightdeck/: __init__.py  backlog.py  cli.py  config.py  demo.py  directory.py  feedback.py  format.py  ledger.py  metrics.py  policy.py  redact.py  router.py  runner.py  scaffold.py  scheduler.py  schemas.py  store.py
src/flightdeck/demo_org/: flightdeck.yaml  models.yaml  usecases.yaml
src/flightdeck/demo_org/workflows/: board-pack-sections.yaml  community-digest.yaml  contract-triage.yaml  localization-qa.yaml  patch-notes-drafting.yaml  support-reply-drafting.yaml
src/flightdeck/integrations/: __init__.py  slack.py
src/flightdeck/providers/: __init__.py  anthropic.py  mock.py  openai.py
src/flightdeck/report/: __init__.py  charts.py  csv_export.py  html.py  terminal.py
tests/: conftest.py  test_backlog_demo.py  test_charts.py  test_cli_and_html.py  test_directory.py  test_feedback.py  test_ledger.py  test_metrics.py  test_policy_router.py  test_providers.py  test_redact.py  test_runner.py  test_scheduler.py  test_slack.py  test_store_config.py  test_terminal.py
