[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-flightdeck"
version = "0.1.0"
description = "A reference implementation for running enterprise AI adoption on evidence: use cases as code, governed runs, an auditable ROI trail."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marc Sturlese" }]
keywords = [
    "ai-adoption",
    "ai-governance",
    "ai-transformation",
    "llm-ops",
    "roi",
    "policy-as-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/sturlese/flightdeck"
Documentation = "https://github.com/sturlese/flightdeck/tree/main/docs"

[project.scripts]
flightdeck = "flightdeck.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flightdeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
